config/samples/gateway.yaml
kind: GatewayClass
apiVersion: gateway.networking.k8s.io/v1beta1
metadata:
  name: blixt
spec:
  controllerName: konghq.com/blixt
---
kind: Gateway
apiVersion: gateway.networking.k8s.io/v1beta1
metadata:
  name: blixt
  namespace: default
spec:
  gatewayClassName: blixt
  listeners:
  - name: udp
    protocol: UDP
    port: 9875
